syntax = "proto3";

package registration;

service RegisterDevice {
  rpc Send (RegistrationMessage) returns (RegistrationResult);
}

message RegistrationMessage {
  string deviceAddress = 1;
}

message RegistrationResult {
  uint32 statusCode = 1;
}